src/styles/index.module.css
.container {
  display: flex;
  flex-flow: row wrap;
}

.post {
  flex: 0 0 300px;
  margin: 0.5rem;
  opacity: 0;
  transform: translateY(4em) rotateZ(-5deg);
  transition: transform 3s 0.25s cubic-bezier(0, 1, 0.3, 1),
    opacity 2s 0.25s ease-out;
}
.post.isVisible {
  opacity: 1;
  transform: rotateZ(0);
}

.post p {
  margin-bottom: 0.5rem;
}

@media all and (max-width: 450px) {
  .container {
    flex-direction: column;
  }

  .post {
    flex: 0;
    margin: 0.8rem;
  }
}

